--- a/make_dataset_pickle.ipynb
+++ b/make_dataset_pickle.ipynb
@@ -38,9 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_train'\n",
-    "val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_test'\n",
-    "# train_dir = '/media/maindisk/data/hooktheory_midi_hr/all12_train'"
+    "# train_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_train'\n",
+    "# val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_test'\n",
+    "# train_dir = '/media/maindisk/data/hooktheory_midi_hr/all12_train'\n",
+    "train_dir = '/media/maindisk/data/synthetic_CA_train'\n",
+    "val_dir = '/media/maindisk/data/synthetic_CA_test'"
    ]
   },
   {
@@ -60,44 +62,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/14676 [00:00<?, ?it/s]"
+      "  0%|          | 0/1000 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|█████▉    | 8736/14676 [04:23<01:54, 51.96it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem in: /media/maindisk/data/hooktheory_midi_hr/CA_train/2518_bruce-rowland_jessicas-theme_intro-and-verse.mid\n",
-      "cannot unpack non-iterable float object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 81%|████████▏ | 11955/14676 [06:00<00:54, 49.54it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Problem in: /media/maindisk/data/hooktheory_midi_hr/CA_train/4022_deftones_battle-axe_pre-chorus-and-chorus.mid\n",
-      "cannot unpack non-iterable float object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 14676/14676 [07:22<00:00, 33.19it/s]\n"
+      "100%|██████████| 1000/1000 [01:29<00:00, 11.23it/s]\n"
      ]
     },
     {
@@ -111,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 758/758 [00:15<00:00, 48.43it/s]\n"
+      "100%|██████████| 100/100 [00:09<00:00, 10.63it/s]\n"
      ]
     }
    ],
