distributed gen and jaz

--- a/make_dataset_pickle.ipynb
+++ b/make_dataset_pickle.ipynb
@@ -41,13 +41,14 @@
     "# train_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_train'\n",
     "# val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_test'\n",
     "# train_dir = '/media/maindisk/data/hooktheory_midi_hr/all12_train'\n",
-    "train_dir = '/media/maindisk/data/synthetic_CA_train'\n",
-    "val_dir = '/media/maindisk/data/synthetic_CA_test'"
+    "# train_dir = '/media/maindisk/data/synthetic_CA_train'\n",
+    "# val_dir = '/media/maindisk/data/synthetic_CA_test'\n",
+    "val_dir = '/media/maindisk/data/gjt_melodies/gjt_CA'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f289365d",
    "metadata": {},
    "outputs": [
@@ -62,28 +63,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1000 [00:00<?, ?it/s]"
+      "  0%|          | 0/547 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [01:29<00:00, 11.23it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frontloading data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:09<00:00, 10.63it/s]\n"
+      "100%|██████████| 547/547 [00:28<00:00, 19.18it/s]\n"
      ]
     }
    ],
@@ -96,7 +83,7 @@
     "    use_pc_roll=True,\n",
     "    use_full_range_melody=False\n",
     ")\n",
-    "train_dataset = CSGridMLMDataset(train_dir, tokenizer, name_suffix='DE')\n",
+    "# train_dataset = CSGridMLMDataset(train_dir, tokenizer, name_suffix='DE')\n",
     "val_dataset = CSGridMLMDataset(val_dir, tokenizer, name_suffix='DE')\n",
     "# train_dataset = CSGridMLMDataset(train_dir, tokenizer, name_suffix='MLMH_bar_qt')"
    ]
