modular SE training

--- a/test_debug_train.ipynb
+++ b/test_debug_train.ipynb
@@ -202,13 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4a5a7eb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "melody_grid = batch[\"pianoroll\"].to(device)           # (B, 256, 100)\n",
-    "harmony_gt = batch[\"input_ids\"].to(device)         # (B, 256)"
+    "harmony_gt = batch[\"harmony_ids\"].to(device)         # (B, 256)"
    ]
   },
   {
