--- a/test_examine_data.ipynb
+++ b/test_examine_data.ipynb
@@ -23,7 +23,7 @@
     "from data_utils import CSGridMLMDataset, CSGridMLM_collate_fn\n",
     "from torch.utils.data import DataLoader\n",
     "from train_utils import apply_masking\n",
-    "from generate_utils import generate_files_with_greedy, generate_files_with_beam, load_model\n",
+    "from generate_utils import generate_files_with_greedy, generate_files_with_beam, load_SE_model\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from plot_utils import save_attention_maps_with_split"
@@ -31,23 +31,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "fabeb740",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "320\n"
+     ]
+    }
+   ],
    "source": [
-    "# tokenizer = CSGridMLMTokenizer(fixed_length=256, intertwine_bar_info=True, trim_start=False)\n",
+    "name_suffix = 'Q16_L320_bar_FR'\n",
+    "print(int(name_suffix.split('_L')[1].split('_')[0]))\n",
     "tokenizer = CSGridMLMTokenizer(\n",
-    "        fixed_length=80,\n",
-    "        quantization='4th',\n",
-    "        intertwine_bar_info=True,\n",
+    "        fixed_length=int(name_suffix.split('_L')[1].split('_')[0]),\n",
+    "        quantization='16th' if 'Q16' in name_suffix else '4th',\n",
+    "        intertwine_bar_info='bar' in name_suffix,\n",
     "        trim_start=False,\n",
-    "        use_pc_roll=True,\n",
-    "        use_full_range_melody=False\n",
+    "        use_pc_roll='PC' in name_suffix,\n",
+    "        use_full_range_melody='FR' in name_suffix\n",
     "    )\n",
-    "# val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_test'\n",
+    "val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_test'\n",
     "# val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_train'\n",
-    "val_dir = '/media/maindisk/data/synthetic_CA_test'"
+    "# val_dir = '/media/maindisk/data/synthetic_CA_test'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f30b6259",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_dataset = CSGridMLMDataset(\n",
+    "    root_dir=val_dir,\n",
+    "    tokenizer=tokenizer,\n",
+    "    name_suffix=name_suffix\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "de7d82af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['harmony_ids', 'attention_mask', 'pianoroll', 'time_signature', 'h_density_complexity'])\n",
+      "320\n",
+      "(320, 89)\n",
+      "89\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = val_dataset[0]\n",
+    "print(d.keys())\n",
+    "print(len(d['harmony_ids']))\n",
+    "print(d['pianoroll'].shape)\n",
+    "print(tokenizer.pianoroll_dim)"
    ]
   },
   {
@@ -97,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ac7ee26d",
    "metadata": {},
    "outputs": [],
    "source": [
     "d = val_dataset[val_idx]\n",
     "harmony_tokens = []\n",
-    "for i in d['input_ids']:\n",
+    "for i in d['harmony_ids']:\n",
     "    harmony_tokens.append(tokenizer.ids_to_tokens[i])"
    ]
   },
