--- a/test_ModularSE_generate.ipynb
+++ b/test_ModularSE_generate.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "8627d4e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -22,11 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f7fd5d00",
    "metadata": {},
    "outputs": [],
    "source": [
+    "nvis = None\n",
     "curriculum_type, subfolder = 'base2', 'Q16_L256_PC_FR'\n",
     "# curriculum_type, subfolder = 'base2', 'Q16_L320_bar_PC_FR'\n",
     "\n",
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "280d70ac",
    "metadata": {},
    "outputs": [],
@@ -51,10 +61,12 @@
     "\n",
     "grid_lenght = int(subfolder.split('_L')[1].split('_')[0])\n",
     "\n",
+    "intertwine_bar_info = 'bar' in subfolder\n",
+    "\n",
     "tokenizer = CSGridMLMTokenizer(\n",
     "    fixed_length=grid_lenght,\n",
     "    quantization='16th' if 'Q16' in subfolder else '4th',\n",
-    "    intertwine_bar_info='bar' in subfolder,\n",
+    "    intertwine_bar_info=intertwine_bar_info,\n",
     "    trim_start=False,\n",
     "    use_pc_roll='PC' in subfolder,\n",
     "    use_full_range_melody='FR' in subfolder\n",
@@ -63,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "bcb7729f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "71afabd4",
    "metadata": {},
    "outputs": [],
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "bbfca772",
    "metadata": {},
    "outputs": [
@@ -146,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 7,
    "id": "273d3e4f",
    "metadata": {},
    "outputs": [
@@ -172,10 +184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": null,
    "id": "7a6c58b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (512) must match the size of tensor b (513) at non-singleton dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 20\u001b[0m\n\u001b[1;32m     16\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(midi_folder, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# gen_harm, real_harm, gen_score, real_score, avg_diffs = generate_files_with_greedy(\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# gen_harm, real_harm, gen_score, real_score, avg_diffs = generate_files_with_beam(\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m gen_harm, real_harm, gen_score, real_score \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_files_with_nucleus\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtokenizer\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     23\u001b[0m \u001b[43m    \u001b[49m\u001b[43minput_f\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minput_f\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmxl_folder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmidi_folder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmidi_folder\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[43m    \u001b[49m\u001b[43mname_suffix\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbar_test\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     27\u001b[0m \u001b[43m    \u001b[49m\u001b[43mintertwine_bar_info\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mintertwine_bar_info\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     28\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnormalize_tonality\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[43m    \u001b[49m\u001b[43muse_constraints\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     30\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# beam_size=5,\u001b[39;49;00m\n\u001b[1;32m     32\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;66;43;03m# top_k=50,\u001b[39;49;00m\n\u001b[1;32m     33\u001b[0m \u001b[43m    \u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.9\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m    \u001b[49m\u001b[43munmasking_order\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43munmasking_order\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# in ['random', 'start', 'end', 'certain', 'uncertain']\u001b[39;49;00m\n\u001b[1;32m     35\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_gen\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     36\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_real\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\n\u001b[1;32m     37\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/media/maindisk/maximos/repos/DualGridEncoderMelHarm/generate_utils.py:1219\u001b[0m, in \u001b[0;36mgenerate_files_with_nucleus\u001b[0;34m(model, tokenizer, input_f, mxl_folder, midi_folder, name_suffix, use_constraints, intertwine_bar_info, normalize_tonality, temperature, p, unmasking_order, create_gen, create_real)\u001b[0m\n\u001b[1;32m   1217\u001b[0m melody_grid \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor( input_encoded[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpianoroll\u001b[39m\u001b[38;5;124m'\u001b[39m] )\u001b[38;5;241m.\u001b[39mreshape( \u001b[38;5;241m1\u001b[39m, input_encoded[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpianoroll\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], input_encoded[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpianoroll\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] )\n\u001b[1;32m   1218\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m create_gen:\n\u001b[0;32m-> 1219\u001b[0m     random_generated_harmony \u001b[38;5;241m=\u001b[39m \u001b[43mnucleus_token_by_token_generate\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1220\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1221\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmelody_grid\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmelody_grid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1222\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmask_token_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtokenizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmask_token_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1223\u001b[0m \u001b[43m        \u001b[49m\u001b[43mbar_token_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtokenizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbar_token_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1224\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtemperature\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1225\u001b[0m \u001b[43m        \u001b[49m\u001b[43mpad_token_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpad_token_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m      \u001b[49m\u001b[38;5;66;43;03m# token ID for <pad>\u001b[39;49;00m\n\u001b[1;32m   1226\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnc_token_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnc_token_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m       \u001b[49m\u001b[38;5;66;43;03m# token ID for <nc>\u001b[39;49;00m\n\u001b[1;32m   1227\u001b[0m \u001b[43m        \u001b[49m\u001b[43mforce_fill\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m         \u001b[49m\u001b[38;5;66;43;03m# disallow <pad>/<nc> before melody ends\u001b[39;49;00m\n\u001b[1;32m   1228\u001b[0m \u001b[43m        \u001b[49m\u001b[43mchord_constraints\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mharmony_input\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43muse_constraints\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mintertwine_bar_info\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m   1229\u001b[0m \u001b[43m        \u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mp\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1230\u001b[0m \u001b[43m        \u001b[49m\u001b[43munmasking_order\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43munmasking_order\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1231\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1232\u001b[0m     gen_output_tokens \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m   1233\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m random_generated_harmony[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mtolist():\n",
+      "File \u001b[0;32m/media/maindisk/maximos/repos/DualGridEncoderMelHarm/generate_utils.py:415\u001b[0m, in \u001b[0;36mnucleus_token_by_token_generate\u001b[0;34m(model, melody_grid, mask_token_id, bar_token_id, temperature, pad_token_id, nc_token_id, force_fill, chord_constraints, p, unmasking_order)\u001b[0m\n\u001b[1;32m    413\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m (visible_harmony \u001b[38;5;241m==\u001b[39m mask_token_id)\u001b[38;5;241m.\u001b[39many():\n\u001b[1;32m    414\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[0;32m--> 415\u001b[0m         logits \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    416\u001b[0m \u001b[43m            \u001b[49m\u001b[43mmelody_grid\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmelody_grid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    417\u001b[0m \u001b[43m            \u001b[49m\u001b[43mharmony_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mvisible_harmony\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    418\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# (1, seq_len, vocab_size)\u001b[39;00m\n\u001b[1;32m    420\u001b[0m     \u001b[38;5;66;03m# --- Masked position selection ---\u001b[39;00m\n\u001b[1;32m    421\u001b[0m     masked_positions \u001b[38;5;241m=\u001b[39m (visible_harmony \u001b[38;5;241m==\u001b[39m mask_token_id)\u001b[38;5;241m.\u001b[39msqueeze(\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mnonzero(as_tuple\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)[\u001b[38;5;241m0\u001b[39m]\n",
+      "File \u001b[0;32m~/miniconda3/envs/torch/lib/python3.12/site-packages/torch/nn/modules/module.py:1511\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1509\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1510\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/torch/lib/python3.12/site-packages/torch/nn/modules/module.py:1520\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1515\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1516\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1518\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1519\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1520\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1522\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1523\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m/media/maindisk/maximos/repos/DualGridEncoderMelHarm/models.py:485\u001b[0m, in \u001b[0;36mSEModular.forward\u001b[0;34m(self, melody_grid, harmony_tokens, conditioning_vec, stage_indices)\u001b[0m\n\u001b[1;32m    482\u001b[0m     full_seq \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat([cond_emb, full_seq], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    484\u001b[0m \u001b[38;5;66;03m# Add positional encoding\u001b[39;00m\n\u001b[0;32m--> 485\u001b[0m full_seq \u001b[38;5;241m=\u001b[39m \u001b[43mfull_seq\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfull_pos\u001b[49m\n\u001b[1;32m    487\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munmasking_stages \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    488\u001b[0m     \u001b[38;5;66;03m# add stage embedding to harmony part\u001b[39;00m\n\u001b[1;32m    489\u001b[0m     stage_emb \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstage_embedding(stage_indices)  \u001b[38;5;66;03m# (B, stage_embedding_dim)\u001b[39;00m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (512) must match the size of tensor b (513) at non-singleton dimension 1"
+     ]
+    }
+   ],
    "source": [
     "# val_idx = 1\n",
     "# val_idx = 402\n",
@@ -188,7 +217,7 @@
     "input_f = data_files[val_idx]\n",
     "# input_f = 'example_inputs/test_midi_constraints.mid'\n",
     "\n",
-    "midi_folder = 'examples_MIDI/' + subfolder + '/' + curriculum_type + str(exponent)\n",
+    "midi_folder = 'examples_MIDI/' + subfolder + '/' + curriculum_type\n",
     "if nvis is not None:\n",
     "    midi_folder += '_nvis' + str(nvis)\n",
     "midi_folder += '_' + unmasking_order + '/'\n",
@@ -196,24 +225,27 @@
     "\n",
     "# gen_harm, real_harm, gen_score, real_score, avg_diffs = generate_files_with_greedy(\n",
     "# gen_harm, real_harm, gen_score, real_score, avg_diffs = generate_files_with_beam(\n",
-    "gen_harm, real_harm, gen_score, real_score = generate_files_with_nucleus(\n",
-    "    model=model,\n",
-    "    tokenizer=tokenizer,\n",
-    "    input_f=input_f,\n",
-    "    mxl_folder=None,\n",
-    "    midi_folder=midi_folder,\n",
-    "    name_suffix='bar_test',\n",
-    "    intertwine_bar_info=True,\n",
-    "    normalize_tonality=False,\n",
-    "    use_constraints=False,\n",
-    "    temperature=0.2,\n",
-    "    # beam_size=5,\n",
-    "    # top_k=50,\n",
-    "    p=0.9,\n",
-    "    unmasking_order=unmasking_order, # in ['random', 'start', 'end', 'certain', 'uncertain']\n",
-    "    create_gen=True,\n",
-    "    create_real=True\n",
-    ")"
+    "if curriculum_type == 'f2f':\n",
+    "    gen_harm, real_harm, gen_score, real_score = generate_files_with_nucleus(\n",
+    "        model=model,\n",
+    "        tokenizer=tokenizer,\n",
+    "        input_f=input_f,\n",
+    "        mxl_folder=None,\n",
+    "        midi_folder=midi_folder,\n",
+    "        name_suffix=curriculum_type,\n",
+    "        intertwine_bar_info=intertwine_bar_info,\n",
+    "        normalize_tonality=False,\n",
+    "        use_constraints=False,\n",
+    "        temperature=0.2,\n",
+    "        # beam_size=5,\n",
+    "        # top_k=50,\n",
+    "        p=0.9,\n",
+    "        unmasking_order=unmasking_order, # in ['random', 'start', 'end', 'certain', 'uncertain']\n",
+    "        create_gen=True,\n",
+    "        create_real=True\n",
+    "    )\n",
+    "elif curriculum_type == 'base2':\n",
+    "    "
    ]
   },
   {
