--- a/test_ModularSE_generate.ipynb
+++ b/test_ModularSE_generate.ipynb
@@ -87,19 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bcb7729f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_test'\n",
-    "val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_test'\n",
-    "# val_dir = '/media/maindisk/data/synthetic_CA_test'"
+    "# val_dir = '/media/maindisk/data/hooktheory_midi_hr/CA_test'\n",
+    "val_dir = '/media/maindisk/data/synthetic_CA_test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "71afabd4",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
     "# exponent, nvis = 10, 31\n",
     "# exponent, nvis = 10, 50\n",
     "\n",
-    "unmasking_order = 'random' # in ['random', 'start', 'end', 'certain', 'uncertain']\n",
+    "unmasking_order = 'start' # in ['random', 'start', 'end', 'certain', 'uncertain']\n",
     "\n",
     "# subfolder = 'SE/CA'\n",
     "# subfolder = 'SE/all12'\n",
