learned pos and vis0

--- a/plot_markov_training.ipynb
+++ b/plot_markov_training.ipynb
@@ -45,12 +45,22 @@
     "        \n",
     "        except Exception as e:\n",
     "            print(f\"❌ Error reading {file}: {e}\")\n",
-    "    \n",
-    "    plt.title(f\"Comparison of '{column_name}' Across Files\")\n",
-    "    plt.xlabel(\"Index\")\n",
-    "    plt.ylabel(column_name)\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
+    "    # for plotting the number of visible tokens\n",
+    "    ax = plt.gca()\n",
+    "    ax2 = ax.twinx()\n",
+    "    ax2.plot(df['n_vis'].values, 'k--', label='n_vis')\n",
+    "    ax2.set_ylabel('n_vis', color='k')\n",
+    "    ax2.tick_params(axis='y', colors='k')\n",
+    "    # plt.title(f\"Comparison of '{column_name}' Across Files\")\n",
+    "    # combine legends from both axes\n",
+    "    handles1, labels1 = ax.get_legend_handles_labels()\n",
+    "    handles2, labels2 = ax2.get_legend_handles_labels()\n",
+    "    ax.legend(handles1 + handles2, labels1 + labels2, loc='best')\n",
+    "\n",
+    "    # plt.title(f\"Comparison of '{column_name}' Across Files\")\n",
+    "    ax.set_xlabel(\"Epoch\")\n",
+    "    ax.set_ylabel(column_name)\n",
+    "    ax.grid(True)\n",
     "    plt.tight_layout()\n",
     "    \n",
     "    # Ensure output directory exists\n",
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e4be72a5",
    "metadata": {},
    "outputs": [
@@ -86,6 +96,34 @@
     "    folder_path=\"results/all_training\",\n",
     "    column_name=\"train_loss\",\n",
     "    output_path=\"figs/train_loss.png\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "35e65cb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Plot saved to figs/val_accuracy.png\n",
+      "✅ Plot saved to figs/val_loss.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "compare_csv_column(\n",
+    "    folder_path=\"results/all_training\",\n",
+    "    column_name=\"val_acc\",\n",
+    "    output_path=\"figs/val_accuracy.png\"\n",
+    ")\n",
+    "compare_csv_column(\n",
+    "    folder_path=\"results/all_training\",\n",
+    "    column_name=\"val_loss\",\n",
+    "    output_path=\"figs/val_loss.png\"\n",
     ")\n"
    ]
   }
