EAIM paper completed

--- a/plot_training.ipynb
+++ b/plot_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "28e8d768",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def compare_csv_column(folder_path: str, column_name: str, output_path: str):\n",
+    "def compare_csv_column(folder_path: str, column_name: str, output_path: str, font_size: int = 12):\n",
     "    \"\"\"\n",
     "    Compare the same column across multiple CSV files in a folder and plot their values.\n",
     "    \n",
@@ -24,6 +24,16 @@
     "    output_path : str\n",
     "        File path to save the resulting plot (e.g., 'output/comparison.png').\n",
     "    \"\"\"\n",
+    "    # set global/font sizes for this figure (override defaults for this call)\n",
+    "    plt.rcParams.update({\n",
+    "        'font.size': font_size,\n",
+    "        'axes.titlesize': font_size + 2,\n",
+    "        'axes.labelsize': font_size,\n",
+    "        'xtick.labelsize': max(font_size - 2, 6),\n",
+    "        'ytick.labelsize': max(font_size - 2, 6),\n",
+    "        'legend.fontsize': max(font_size - 2, 6)\n",
+    "    })\n",
+    "\n",
     "    # Collect all CSV files in the folder\n",
     "    csv_files = [f for f in os.listdir(folder_path) if f.endswith('.csv')]\n",
     "    \n",
@@ -31,25 +41,26 @@
     "        raise ValueError(f\"No CSV files found in {folder_path}\")\n",
     "    \n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    \n",
+    "    n_vis_col = None\n",
     "    for file in csv_files:\n",
     "        file_path = os.path.join(folder_path, file)\n",
     "        try:\n",
     "            df = pd.read_csv(file_path)\n",
-    "            \n",
+    "            if df['n_vis'].iloc[-1] > 0:\n",
+    "                n_vis_col = df['n_vis'].values\n",
     "            if column_name not in df.columns:\n",
     "                print(f\"⚠️ Skipping {file} — column '{column_name}' not found.\")\n",
     "                continue\n",
     "            \n",
-    "            plt.plot(df[column_name].values, label=file)\n",
+    "            plt.plot(df[column_name].values, label=file.removesuffix('.csv'))\n",
     "        \n",
     "        except Exception as e:\n",
     "            print(f\"❌ Error reading {file}: {e}\")\n",
     "    # for plotting the number of visible tokens\n",
     "    ax = plt.gca()\n",
     "    ax2 = ax.twinx()\n",
-    "    ax2.plot(df['n_vis'].values, 'k--', label='n_vis')\n",
-    "    ax2.set_ylabel('n_vis', color='k')\n",
+    "    ax2.plot(n_vis_col, 'k--', label='#umasked', alpha=0.5)\n",
+    "    ax2.set_ylabel('#umasked', color='k')\n",
     "    ax2.tick_params(axis='y', colors='k')\n",
     "    # plt.title(f\"Comparison of '{column_name}' Across Files\")\n",
     "    # combine legends from both axes\n",
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "e4be72a5",
    "metadata": {},
    "outputs": [
@@ -90,18 +101,20 @@
     "compare_csv_column(\n",
     "    folder_path=\"results/all_training\",\n",
     "    column_name=\"train_acc\",\n",
-    "    output_path=\"figs/train_accuracy.png\"\n",
+    "    output_path=\"figs/train_accuracy.png\",\n",
+    "    font_size=20\n",
     ")\n",
     "compare_csv_column(\n",
     "    folder_path=\"results/all_training\",\n",
     "    column_name=\"train_loss\",\n",
-    "    output_path=\"figs/train_loss.png\"\n",
+    "    output_path=\"figs/train_loss.png\",\n",
+    "    font_size=20\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "35e65cb6",
    "metadata": {},
    "outputs": [
@@ -118,12 +131,14 @@
     "compare_csv_column(\n",
     "    folder_path=\"results/all_training\",\n",
     "    column_name=\"val_acc\",\n",
-    "    output_path=\"figs/val_accuracy.png\"\n",
+    "    output_path=\"figs/val_accuracy.png\",\n",
+    "    font_size=20\n",
     ")\n",
     "compare_csv_column(\n",
     "    folder_path=\"results/all_training\",\n",
     "    column_name=\"val_loss\",\n",
-    "    output_path=\"figs/val_loss.png\"\n",
+    "    output_path=\"figs/val_loss.png\",\n",
+    "    font_size=20\n",
     ")\n"
    ]
   }
