--- a/results/results_order_test_means.tex
+++ b/results/results_order_test_means.tex
@@ -2,14 +2,14 @@
 \toprule
 Instance & CHE & CC & CTD & CTnCTR & PCS & MCTD & HRHE_i & HRC_i & CBS & row_mean \\
 \midrule
+DE_no_Mself_certain & 1.2017 & 4.0778 & 0.9547 & 0.7920 & 0.4217 & 1.4117 & 0.4492 & 2.0831 & 0.1263 & 1.2798 \\
 SE_certain & 1.3235 & 4.8536 & 0.9126 & 0.7933 & 0.3940 & 1.4158 & 0.4520 & 2.0383 & 0.1225 & 1.3673 \\
 Ground Truth & 1.4078 & 4.9485 & 0.9748 & 0.7769 & 0.4060 & 1.4139 & 0.4542 & 1.9710 & 0.2314 & 1.3983 \\
-DE_no_Mself_certain & 1.3167 & 4.6240 & 0.9234 & 0.7896 & 0.4235 & 1.4105 & 0.7287 & 2.7467 & 0.2214 & 1.4649 \\
-SE16_certain & 1.3176 & 4.6280 & 0.9237 & 0.7901 & 0.4236 & 1.4103 & 0.7287 & 2.7454 & 0.2219 & 1.4655 \\
-DE_cross_certain & 1.3175 & 4.6280 & 0.9231 & 0.7899 & 0.4236 & 1.4104 & 0.7295 & 2.7559 & 0.2224 & 1.4667 \\
-DE_no_MHself_certain & 1.3186 & 4.6332 & 0.9234 & 0.7902 & 0.4238 & 1.4104 & 0.7298 & 2.7546 & 0.2221 & 1.4673 \\
-DE4_certain & 1.3186 & 4.6346 & 0.9236 & 0.7895 & 0.4232 & 1.4107 & 0.7300 & 2.7559 & 0.2219 & 1.4676 \\
 DE_certain & 1.3181 & 4.6293 & 0.9235 & 0.7895 & 0.4235 & 1.4105 & 0.7327 & 2.7639 & 0.2220 & 1.4681 \\
-SE4_certain & 1.3192 & 4.6359 & 0.9231 & 0.7898 & 0.4235 & 1.4106 & 0.7320 & 2.7639 & 0.2219 & 1.4689 \\
+DE_lp_certain & 1.4133 & 5.1913 & 0.9720 & 0.7913 & 0.4183 & 1.4120 & 0.9064 & 3.1728 & 0.2996 & 1.6197 \\
+DE_v0_certain & 1.4143 & 5.2916 & 0.9595 & 0.7981 & 0.4288 & 1.4049 & 0.8867 & 3.1161 & 0.2928 & 1.6214 \\
+DE_cross_certain & 1.4295 & 5.3351 & 0.9547 & 0.8006 & 0.4264 & 1.4065 & 0.8821 & 3.1069 & 0.2871 & 1.6254 \\
+DE_no_MHself_certain & 1.3928 & 5.3259 & 0.9484 & 0.8056 & 0.4349 & 1.4046 & 0.9980 & 3.4024 & 0.3093 & 1.6691 \\
+SE_v0_certain & 1.5219 & 5.9354 & 0.9741 & 0.7999 & 0.4345 & 1.4045 & 1.0972 & 3.6240 & 0.3869 & 1.7976 \\
 \bottomrule
 \end{tabular}
