--- a/results/results_order_jazz_mae.tex
+++ b/results/results_order_jazz_mae.tex
@@ -2,13 +2,13 @@
 \toprule
 Instance & CHE & CC & CTD & CTnCTR & PCS & MCTD & HRHE_i & HRC_i & CBS \\
 \midrule
-DE4_certain & 0.5535 & 4.6262 & 0.2316 & 0.1106 & 0.1104 & 0.0816 & 0.5567 & 1.5047 & 0.1778 \\
 DE_certain & 0.5533 & 4.6167 & 0.2321 & 0.1109 & 0.1107 & 0.0817 & 0.5562 & 1.5104 & 0.1769 \\
-DE_cross_certain & 0.5531 & 4.6167 & 0.2321 & 0.1109 & 0.1106 & 0.0820 & 0.5559 & 1.5123 & 0.1774 \\
-DE_no_MHself_certain & 0.5527 & 4.6148 & 0.2324 & 0.1111 & 0.1104 & 0.0818 & 0.5533 & 1.5123 & 0.1773 \\
-DE_no_Mself_certain & 0.5536 & 4.6319 & 0.2324 & 0.1109 & 0.1105 & 0.0818 & 0.5562 & 1.5256 & 0.1764 \\
-SE16_certain & 0.5533 & 4.6300 & 0.2321 & 0.1107 & 0.1104 & 0.0816 & 0.5560 & 1.5161 & 0.1770 \\
-SE4_certain & 0.5546 & 4.6224 & 0.2312 & 0.1108 & 0.1106 & 0.0818 & 0.5574 & 1.5199 & 0.1772 \\
+DE_cross_certain & 0.5534 & 4.6357 & 0.2323 & 0.1110 & 0.1108 & 0.0819 & 0.5535 & 1.5028 & 0.1778 \\
+DE_lp_certain & 0.5537 & 4.6186 & 0.2325 & 0.1109 & 0.1102 & 0.0820 & 0.5549 & 1.5085 & 0.1768 \\
+DE_no_MHself_certain & 0.5534 & 4.6167 & 0.2315 & 0.1109 & 0.1104 & 0.0820 & 0.5541 & 1.5104 & 0.1774 \\
+DE_no_Mself_certain & 0.5532 & 4.6224 & 0.2323 & 0.1107 & 0.1102 & 0.0819 & 0.5536 & 1.4991 & 0.1767 \\
+DE_v0_certain & 0.5545 & 4.6357 & 0.2328 & 0.1109 & 0.1105 & 0.0817 & 0.5555 & 1.5104 & 0.1770 \\
 SE_certain & 0.5133 & 4.3207 & 0.2093 & 0.0944 & 0.1104 & 0.0771 & 0.3580 & 1.0968 & 0.1833 \\
+SE_v0_certain & 0.5542 & 4.6262 & 0.2311 & 0.1110 & 0.1106 & 0.0820 & 0.5526 & 1.5104 & 0.1774 \\
 \bottomrule
 \end{tabular}
