--- a/results/results_order_jazz_means.tex
+++ b/results/results_order_jazz_means.tex
@@ -3,12 +3,12 @@
 Instance & CHE & CC & CTD & CTnCTR & PCS & MCTD & HRHE_i & HRC_i & CBS & row_mean \\
 \midrule
 SE_certain & 1.8768 & 8.6660 & 0.8723 & 0.8002 & 0.3890 & 1.3851 & 0.5401 & 2.5351 & 0.1098 & 1.9083 \\
-SE4_certain & 1.7910 & 8.1860 & 0.8037 & 0.7629 & 0.3796 & 1.4018 & 0.9264 & 3.3681 & 0.2538 & 1.9859 \\
-DE4_certain & 1.7935 & 8.1973 & 0.8031 & 0.7628 & 0.3796 & 1.4017 & 0.9260 & 3.3567 & 0.2545 & 1.9862 \\
-DE_no_MHself_certain & 1.7920 & 8.1898 & 0.8046 & 0.7629 & 0.3798 & 1.4017 & 0.9276 & 3.3681 & 0.2539 & 1.9867 \\
-DE_cross_certain & 1.7926 & 8.1954 & 0.8027 & 0.7631 & 0.3798 & 1.4018 & 0.9273 & 3.3643 & 0.2538 & 1.9868 \\
-SE16_certain & 1.7935 & 8.2011 & 0.8036 & 0.7629 & 0.3798 & 1.4019 & 0.9268 & 3.3643 & 0.2541 & 1.9876 \\
-DE_no_Mself_certain & 1.7931 & 8.2030 & 0.8038 & 0.7630 & 0.3797 & 1.4019 & 0.9279 & 3.3700 & 0.2542 & 1.9885 \\
+DE_cross_certain & 1.7924 & 8.1879 & 0.8040 & 0.7630 & 0.3801 & 1.4018 & 0.9228 & 3.3510 & 0.2539 & 1.9841 \\
+DE_no_Mself_certain & 1.7932 & 8.1935 & 0.8030 & 0.7626 & 0.3795 & 1.4016 & 0.9253 & 3.3548 & 0.2543 & 1.9853 \\
+DE_v0_certain & 1.7919 & 8.1879 & 0.8030 & 0.7631 & 0.3800 & 1.4015 & 0.9275 & 3.3662 & 0.2535 & 1.9861 \\
+SE_v0_certain & 1.7919 & 8.1860 & 0.8030 & 0.7630 & 0.3794 & 1.4022 & 0.9276 & 3.3700 & 0.2537 & 1.9863 \\
+DE_lp_certain & 1.7933 & 8.2087 & 0.8036 & 0.7628 & 0.3796 & 1.4016 & 0.9232 & 3.3529 & 0.2532 & 1.9865 \\
+DE_no_MHself_certain & 1.7925 & 8.1954 & 0.8040 & 0.7631 & 0.3800 & 1.4016 & 0.9263 & 3.3662 & 0.2543 & 1.9871 \\
 DE_certain & 1.7935 & 8.2030 & 0.8040 & 0.7633 & 0.3800 & 1.4016 & 0.9299 & 3.3700 & 0.2549 & 1.9889 \\
 Ground Truth & 2.2027 & 11.6471 & 0.8208 & 0.8297 & 0.3145 & 1.4042 & 0.5093 & 2.0607 & 0.2426 & 2.2257 \\
 \bottomrule
