--- a/results/results_order_test_mae.tex
+++ b/results/results_order_test_mae.tex
@@ -2,13 +2,13 @@
 \toprule
 Instance & CHE & CC & CTD & CTnCTR & PCS & MCTD & HRHE_i & HRC_i & CBS \\
 \midrule
-DE4_certain & 0.3712 & 1.6966 & 0.2947 & 0.1054 & 0.1085 & 0.0860 & 0.5277 & 1.2863 & 0.1958 \\
 DE_certain & 0.3740 & 1.7124 & 0.2939 & 0.1053 & 0.1085 & 0.0858 & 0.5290 & 1.2995 & 0.1966 \\
-DE_cross_certain & 0.3719 & 1.7032 & 0.2947 & 0.1056 & 0.1085 & 0.0859 & 0.5274 & 1.2916 & 0.1958 \\
-DE_no_MHself_certain & 0.3733 & 1.7164 & 0.2943 & 0.1056 & 0.1090 & 0.0860 & 0.5286 & 1.2902 & 0.1956 \\
-DE_no_Mself_certain & 0.3729 & 1.7071 & 0.2934 & 0.1054 & 0.1086 & 0.0857 & 0.5280 & 1.2850 & 0.1957 \\
-SE16_certain & 0.3724 & 1.7111 & 0.2942 & 0.1057 & 0.1089 & 0.0860 & 0.5260 & 1.2836 & 0.1954 \\
-SE4_certain & 0.3720 & 1.7058 & 0.2942 & 0.1059 & 0.1088 & 0.0862 & 0.5288 & 1.2968 & 0.1956 \\
+DE_cross_certain & 0.3569 & 1.7876 & 0.2756 & 0.1064 & 0.1140 & 0.0852 & 0.5688 & 1.4050 & 0.2004 \\
+DE_lp_certain & 0.3573 & 1.7757 & 0.2728 & 0.1062 & 0.1118 & 0.0839 & 0.5903 & 1.4815 & 0.2068 \\
+DE_no_MHself_certain & 0.3817 & 1.8575 & 0.2717 & 0.1027 & 0.1067 & 0.0806 & 0.6373 & 1.6135 & 0.2041 \\
+DE_no_Mself_certain & 0.3940 & 1.7045 & 0.2973 & 0.1013 & 0.1114 & 0.0861 & 0.4458 & 1.0356 & 0.1842 \\
+DE_v0_certain & 0.3355 & 1.6992 & 0.2721 & 0.0998 & 0.1027 & 0.0797 & 0.5823 & 1.4380 & 0.1957 \\
 SE_certain & 0.4159 & 1.9208 & 0.3052 & 0.1162 & 0.1196 & 0.0952 & 0.4623 & 1.0858 & 0.1956 \\
+SE_v0_certain & 0.3585 & 2.0449 & 0.2591 & 0.1007 & 0.1065 & 0.0782 & 0.6962 & 1.7480 & 0.2289 \\
 \bottomrule
 \end{tabular}
